--- a/src/jamtaba/gui/BaseTrackView.ui
+++ b/src/jamtaba/gui/BaseTrackView.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>TrackView</class>
- <widget class="QWidget" name="TrackView">
+ <class>BaseTrackView</class>
+ <widget class="QWidget" name="BaseTrackView">
   <property name="geometry">
    <rect>
     <x>0</x>
