--- a/src/jamtaba/gui/NinjamRoomWindow.ui
+++ b/src/jamtaba/gui/NinjamRoomWindow.ui
@@ -85,9 +85,16 @@
        <verstretch>1</verstretch>
       </sizepolicy>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
+     <layout class="QVBoxLayout" name="contentLayout">
       <item>
-       <widget class="NinjamPanel" name="topPanel" native="true"/>
+       <widget class="NinjamPanel" name="topPanel" native="true">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QScrollArea" name="scrollArea">
@@ -106,7 +113,7 @@
            <x>0</x>
            <y>0</y>
            <width>709</width>
-           <height>382</height>
+           <height>195</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout">
