--- a/src/jamtaba/gui/NinjamRoomWindow.ui
+++ b/src/jamtaba/gui/NinjamRoomWindow.ui
@@ -26,8 +26,14 @@
    <property name="leftMargin">
     <number>0</number>
    </property>
+   <property name="topMargin">
+    <number>9</number>
+   </property>
    <property name="rightMargin">
     <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>9</number>
    </property>
    <item>
     <widget class="QWidget" name="widget" native="true">
@@ -90,6 +96,9 @@
      <layout class="QVBoxLayout" name="contentLayout">
       <property name="spacing">
        <number>6</number>
+      </property>
+      <property name="leftMargin">
+       <number>9</number>
       </property>
       <property name="topMargin">
        <number>0</number>
